# wxFormBuilder

./: .gitignore  .travis.yml  CMakeLists.txt
.github/workflows/: msys2.sh  windows.yml
install/linux/: org.wxformbuilder.wxFormBuilder.json
